--- a/post/templates/post/index.html
+++ b/post/templates/post/index.html
@@ -14,9 +14,19 @@ Home
 
         </nav>
     </div>
-    <div class="box">
-    
+
+    {% for feature in featured_posts %}
+    <div class="jumbotron p-3 p-md-5  rounded " style="background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0, 0, 0, 0.5)),url('{{feature.image.url}}'); background-repeat: no-repeat;
+    background-position: center; ">
+        <div class="col-md-12 px-0">
+            <h1 class="display-4 text-white font-weight-bold">{{feature.title}}</h1>
+            <p class="lead my-3 text-white">{{feature.content|truncatechars:"300"}}</p>
+            <p class="lead mb-0"><a href="#"
+                    class="text-warning font-weight-bold">Continue reading...</a>
+            </p>
+        </div>
     </div>
+    {% endfor %}
 
     <div class="row mb-2">
 
