--- a/post/templates/post/login.html
+++ b/post/templates/post/login.html
@@ -4,16 +4,30 @@ Login Page
 {% endblock title %}
 
 {% block body %}
-    <div class="container">
-        <br>
+    <div class="container mt-4 d-flex justify-content-center">
         <form method="POST">
             {% csrf_token %}
-            <label>Username</label>
-            <input type="text" name="username" placeholder="Username"><br>
-            <label>Password</label>
-            <input type="password" name="password"><br>
-            <button class="btn btn-primary">Login</button>
+
+            <div class="form-label-group">
+                <label>Username</label>
+                <input type="text" name="username" class="form-control" placeholder="Username">
+            </div>
+
+            <div class="form-label-group">
+                <label>Password</label>
+                <input type="password" name="password" class="form-control">
+            </div>
+
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
+
             <p>Do not have account?<span> <a href="{% url 'register' %}">Register</a></span></p>
+
+            <button class="btn btn-primary">Login</button>
+            
         </form>
         {% for message in messages %}
         <h3>{{message}}</h3>
