--- a/post/templates/post/index.html
+++ b/post/templates/post/index.html
@@ -9,7 +9,7 @@ Home
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-start">
             {% for category in categories %}
-            <a class="p-2 text-info font-weight-bold" href="#">{{category}}</a>
+            <a class="p-2 text-info font-weight-bold" href="?cat={{category}}">{{category}}</a>
             {% endfor %}
 
         </nav>
