--- a/post/templates/post/chat.html
+++ b/post/templates/post/chat.html
@@ -4,22 +4,35 @@
 Public Chat
 {% endblock title %}
 {% block body %}
+<script>
+    function updatescroll(){
+        var element = document.getElementById("chat-box");
+        element.scrollTop = element.scrollHeight;
+    }
+    window.onload = updatescroll
+</script>
 <div class="container mt-4 d-flex justify-content-center">
     <div style="border: 1px solid; height: 500px; width: 500px;">
-        <div style="height:400px;">
+        <div id="chat-box" style="height:450px; padding: 10px; overflow: auto; overflow-x: hidden;">
 
             {% for chat in chats %}
-            <div style="margin-top: 15px;">
-                {{chat.sender}} : 
-                <span style=" background-color: lightblue; border: 1px solid; padding: 5px; border-radius: 5px; width: fit-content;">
+            <div style="padding: 5px;">
+
+                <div style="display: inline-block; width: 80px; height: fit-content; word-wrap:break-word;">
+                    {{chat.sender}} :
+                </div>
+
+                <div style=" background-color: lightblue; border: 1px solid; width:350px; height: fit-content;
+                 word-wrap:break-word; display: inline-block; padding: 5px; border-radius: 15px;">
                     <span style="font-weight: bold;">{{chat.message}}</span>
                     <span style="font-size: 10px; font-style: italic;">{{chat.created_at|naturaltime}}</span>
-                </span>
+                </div>
+
             </div>
+
             {% endfor %}
 
         </div>
-        <hr>
         <div>
             <form class="d-flex justify-content-around" style="height: 50px; padding: 5px;" method="POST">
                 {% csrf_token %}
@@ -30,4 +43,5 @@ Public Chat
     </div>
     
 </div>
+
 {% endblock body %}
